--- a/app.css
+++ b/app.css
@@ -64,7 +64,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto Mono', 'Open Sans', sans-serif;
+  font-family: 'JetBrains Mono', 'Open Sans', sans-serif;
   transition: 0.2s ease-in-out;
 }
 
