--- a/app.css
+++ b/app.css
@@ -10,7 +10,7 @@
 //  ┘ ┴ ┴┴└─┴┴ ┴└─┘┴─┘└─┘└─┘ 
  */
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap'); /* Font Import */
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;700&display=swap'); /* Font Import */
 
 :root {
   /* Font Size */
@@ -64,7 +64,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'JetBrains Mono', 'Open Sans', sans-serif;
+  font-family: 'JetBrains Mono', sans-serif;
   transition: 0.2s ease-in-out;
 }
 
